# fin

./: .gitignore  README.md  pyproject.toml
docs/: dynamodb.md
fin/: configs.py
fin/api/: .#main.py  app.py  main.py  middleware.py  models.py
fin/api/static/scripts/: htmxExtras.js
fin/api/templates/: actions.html  badges.html  labels.html  layout.html  new_transaction.html  transactions-page.html  transactions.html
fin/db/dynamodb/: __init__.py
fin/db/dynamodb/models/: common.py  labels.py  transactions.py  users.py
fin/db/dynamodb/request_building/: common.py  labels.py  transactions.py  users.py
fin/db/dynamodb/resolvers/: __init__.py
fin/resolvers/: labels.py  models.py  transactions.py  users.py
fin/schema/: __init__.py  core.py  extensions.py  scalars.py
fin/schema/utils/: mapping.py
fin_backend/api/: main.py  middleware.py
fin_backend/api/templates/: layout.html
fin_backend/db/dynamodb/: __init__.py
fin_backend/db/dynamodb/request_building/: common.py  transactions.py  users.py
fin_backend/db/dynamodb/resolvers/: __init__.py
fin_backend/resolvers/: transactions.py  users.py
fin_backend/schema/: __init__.py  extensions.py  schema.gql
fin_backend/utils/: datetime.py
tests/: conftest.py  test_transactions.py  test_users.py  utils.py
tests/db/dynamodb/request_building/: test_common.py
tests/schema/: gql_queries.py  test_users.py  utils.py
tests/snapshots/: snap_test_transactions.py  snap_test_users.py
